# rust-web-perf-test

./: .gitignore  build.sh  loadtest.py  loadtest_hw.py  loadtest_websockets_hw_multiuser.py  loadtest_websockets_hw_singleuser.py  requirements.txt  setup.sh
.github/workflows/: rust.yml
actix-webserver/: Cargo.toml  notes.md
actix-webserver/src/: main.rs
axum-webserver/: Cargo.toml  notes.md
axum-webserver/src/: main.rs
rocket-webserver/: Cargo.toml  notes.md
rocket-webserver/src/: main.rs
